[package]
name = "frog-problem"
version = "0.1.0"
authors = ["ncoif <github@ncoif.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fern = "0.5"
log = "0.4"
rand = "0.7"

[dev-dependencies]
mockers = "0.21"
mockers_derive = "0.21"
